# lawtechhackson

./: .dockerignore  .env  .gitignore  Dockerfile.backend  Dockerfile.backend.base  Dockerfile.frontend  LawIssue_list.txt  README.md  pyproject.toml
lawtechhackson/: constants.py  cos_lawyer.py  crawler.py  db_manager.py  db_models.py  droidtown_api.py  env.py  judgment_manager.py  lawyer_service.py  main.py  models.py  post_process_judgment.py  server_main.py
lawtechhackson_client/: README.md  package.json
lawtechhackson_client/src/: App.tsx
sample_data/: chinese
sample_data/droidtown/臺灣士林地方法院_民事/: Articut_民事裁定_110,簡聲抗,19_2021-09-29.json
sample_data/lawsnote/臺灣士林地方法院_民事/: 民事裁定_110,簡聲抗,19_2021-09-29.json
sample_data/lawyer_info_from_crawler/: law_data_Changhua.pickle  law_data_Chiayi.pickle  law_data_Hsinchu.pickle  law_data_Hualien.pickle  law_data_Kaohsiung.pickle  law_data_Keelung.pickle  law_data_Miaoli.pickle  law_data_Nantou.pickle  law_data_Pingtung.pickle  law_data_Taichung.pickle  law_data_Tainan.pickle  law_data_Taitung.pickle  law_data_Taoyuan.pickle  law_data_Yilan.pickle  law_data_Yunlin.pickle  law_data_taipei.pickle
