[tool.poetry]
name = "lawtechhackson"
version = "0.1.0"
description = ""
authors = ["Grimmer <grimmer0125@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scikit-learn = "^1.1.2"
StrEnum = "^0.4.8"
beanie = "^1.11.7"
numpy = "^1.23.1"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
pymongo = {extras = ["extras"], version = "^4.2.0"}
sentence-transformers = "^2.2.2"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
